--- a/requirements.txt
+++ b/requirements.txt
@@ -223,3 +223,8 @@ Werkzeug==3.1.3
 wheel==0.45.1
 widgetsnbextension==4.0.13
 wrapt==1.17.0
+
+pillow~=11.1.0
+pandas~=2.2.3
+lxml~=5.3.0
+requests~=2.32.3
